--- a/JavascriptClient/wwwroot/index.html
+++ b/JavascriptClient/wwwroot/index.html
@@ -13,6 +13,6 @@
     <pre id="results"></pre>
 
     <script src="oidc-client.js"></script>
-    <script src="app.js"></script>
+    <script src="app.js?v=10"></script>
 </body>
 </html>
